@@ -240,6 +240,9 @@ Trunk (unreleased changes)
     HADOOP-2323. JobTracker.close() should not print stack traces for
     normal exit.  (jimk via cutting)
 
+    HADOOP-2376. Prevents sort example from overriding the number of maps.
+    (Owen O'Malley via ddas)
+
 Branch 0.15 (unreleased)
 
   BUG FIXES
